# netconf-parser

./: .gitignore  MANIFEST.in  README.md  example.py  pyproject.toml
netconf_parser/: __init__.py  compare.py  models.py  parser.py  search.py
tests/: __init__.py  test_compare.py  test_models.py  test_parser.py  test_search.py
